<resources>
    <string name="app_name">Cardme</string>

    <string name="error">Error</string>
    <string name="please_wait">Please wait…</string>
    <string name="none">None</string>
    <string name="card_number">Card number</string>
    <string name="card_holder">Card holder</string>
    <string name="holder_name">Holder name</string>
    <string name="number_copied">Copied to clipboard</string>
    <string name="card_removed">Card has been removed</string>
    <string name="debt_removed">Debt has been removed</string>
    <string name="who_lent">Who lent you?</string>
    <string name="debt_information">Debt information</string>
    <string name="share_card">Share card number using…</string>
    <string name="title">Title</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="card_background">Card background</string>
    <string name="user_interface">User interface</string>
    <string name="about_the_app">About the app</string>
    <string name="rate_the_app">Rate the app</string>

    <!-- screen labels -->
    <string name="card_details">Card details</string>
    <string name="holder_details">Holder details</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="cards">Cards</string>
    <string name="holders">Holders</string>
    <string name="debts">Debts</string>

    <!-- actions -->
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_accept">Accept</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="about">About</string>
    <string name="empty_trash">Empty trash</string>
    <string name="share">Share</string>
    <string name="share_using_nfc">Share using NFC</string>
    <string name="edit">Edit</string>

    <!-- formats -->
    <string name="format_holder_number">%s\'s card</string>
    <string name="format_holder_cards">Cards: %d</string>
    <string name="format_holder_debts">Debts: %d</string>
    <string name="format_debt_holder">Holder: %s</string>

    <!-- list placeholders -->
    <string name="list_debts_placeholder">You didn\'t borrow anything. \nTo add a debt click on button below</string>
    <string name="list_debts_placeholder_holder_details">You didn\'t borrow anything</string>
    <string name="list_holders_placeholder">There are no holders yet</string>
    <string name="list_cards_placeholder">There are no cards yet.\nTo add a card click on button below</string>
    <string name="list_trash_placeholder">Nothing in trash</string>

    <!-- app shortcuts -->
    <string name="shortcut_add_card">Add card</string>
    <string name="shortcut_debts">Your debts</string>
    <string name="shortcut_add_debt">Add debt</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- errors -->
    <string name="error_card_exist">The card is already exist. Do you want to overwrite?</string>

    <!-- transition shared elements -->
    <string name="transition_add_debt" translatable="false">transition_add_debt</string>
    <string name="transition_card_details" translatable="false">transition_card_details</string>

</resources>
